# coding-tools-mcp

./: BENCHMARK.md  CHANGELOG.md  CITATION.cff  Dockerfile  Makefile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-smoke.yml  publish-pypi.yml  start-sandbox.yml
apps/desktop-client/: README.md
benchmarks/: mcp_http.py
benchmarks/dogfood/: compare_reports.py  mcp_deterministic_runner.py
cloudflare/sandbox-control/: README.md  wrangler.toml
coding_tools_mcp/: __init__.py  errors.py  oauth.py  patching.py  processes.py  project_context.py  protocol.py  server.py  textutils.py  tool_results.py  transport_http.py  transport_stdio.py
docs/: ci-and-tests.md  competitive-analysis.md  docker.md  dogfood.md  embedding.md  exec-command-recipes.md  limitations.md  mcp-client-config.md  permission-modes.md  profile-v0.1.md  profile.md  quickstart.md  remote-mcp.md  runtime-contract-v0.2.md  tools-and-schemas.md  troubleshooting.md
docs/dogfood/: coding-tools-dogfood-transcript.json
npm/coding-tools-mcp/: README.md
reports/benchmark/: dogfood-v0.1-baseline.json  dogfood-v0.1-baseline.md  dogfood-v0.1-v0.2.json  dogfood-v0.1-v0.2.md  mcp-latency.json  mcp-latency.md  swebench-regression.json  swebench-regression.md
reports/compliance/: latest.json  latest.md
reports/dogfood/: coding-tools-dogfood.json  coding-tools-dogfood.md
scripts/: check_desktop_i18n.py  install.sh  mcp_smoke.py  tunnel-cloudflared.sh  tunnel-common.sh  tunnel-devtunnel.sh  tunnel-ngrok.sh  tunnel.sh
tests/: test_desktop_client.py
(+23 files in other folders)
