[build-system]
requires = ["setuptools>=68,<77"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-tools-mcp"
version = "0.2.0"
description = "Workspace-confined coding tools exposed as an MCP server."
requires-python = ">=3.11"
dependencies = [
  "PyJWT>=2.8",
]
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Coding Tools MCP Contributors" }]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/xyTom/coding-tools-mcp"
Documentation = "https://github.com/xyTom/coding-tools-mcp/tree/main/docs"
Source = "https://github.com/xyTom/coding-tools-mcp"
Issues = "https://github.com/xyTom/coding-tools-mcp/issues"

[project.optional-dependencies]
dev = [
  "mypy>=2.1,<2.2",
  "ruff>=0.15,<0.16",
  "typing_extensions>=4.12",
]
desktop = [
  "PySide6>=6.8,<6.9",
  "psutil>=7.0,<8",
]
image = [
  "Pillow>=10.0",
]

[project.scripts]
coding-tools-mcp = "coding_tools_mcp.server:main"
coding-tools-mcp-desktop = "mcp_desktop_client.app:main"

[tool.setuptools.packages.find]
where = [".", "apps/desktop-client"]
include = ["coding_tools_mcp*", "mcp_desktop_client*"]

[tool.setuptools.package-data]
mcp_desktop_client = ["locales/*.qm", "locales/*.ts"]
